feat: added get-all-accessible-projects api
