# apps/api/src/modules/project/project.service.ts
@@ -3,6 +3,7 @@ import { ConfigService } from '@nestjs/config';
 import { InjectRepository } from '@nestjs/typeorm';
 import { CreateProjectInputDto } from '@the-secret-store/api-interfaces/dtos/project';
 import { ProjectAccessLevel } from '@the-secret-store/api-interfaces/enums';
+import { ObjectId } from 'mongodb';
 import { ObjectID as ObjectIdType, Repository } from 'typeorm';
 import { EncryptionService } from '../../utils/EncryptionService';
 import { UserService } from '../user/user.service';
@@ -140,5 +141,34 @@ export class ProjectService {
     }
 
     await this.repo.save(project);
+  }
+
+  /*
+  async getAllAccessibleProjects(userId: ObjectIdType) {
+    const qb = this.repo.createQueryBuilder('project');
+    qb.select().where('project.owner = :userId', { userId });
+    qb.orWhere('project.collaborators = :userId', { userId });
+    qb.orWhere('project.members = :userId', { userId });
+    const projects = await qb.getMany();
+
+    this.logger.debug(projects, ProjectService.name);
+
+    return projects;
+  }
+  */
+
+  async getAllAccessibleProjects(userId: ObjectIdType) {
+    const projects = await this.repo.find();
+
+    const accessibleProjects = projects.filter(
+      project =>
+        ObjectId(project.owner).equals(userId) ||
+        project.collaborators.some(collaborator => collaborator.equals(userId)) ||
+        project.members.some(member => member.equals(userId))
+    );
+
+    this.logger.debug(accessibleProjects);
+
+    return accessibleProjects;
   }
 }
